REGRESSION (r261001): ASSERTION FAILED: m_clientCounts.contains(contextId) in WebKit::VideoFullscreenManagerProxy::removeClientForContext https://bugs.webkit.org/show_bug.cgi?id=212986

Reviewed by Jer Noble.

* UIProcess/Cocoa/VideoFullscreenManagerProxy.mm:
(WebKit::VideoFullscreenManagerProxy::removeClientForContext):
Function removeClientForContext() could be called multiple times with the same contextId.
We should bail out if m_clientCounts does not contain the contextId.


Canonical link: https://commits.webkit.org/226809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263991 268f45cc-cd09-0410-ab3c-d52691b4dbfc